@@ -2,9 +2,9 @@
 
 include ../config/Makefile
 
-INCLUDES=-I ../camlp4 -I ../boot
+INCLUDES=-I ../camlp4 -I ../boot -I $(OTOP)/lex
 OCAMLCFLAGS=$(INCLUDES)
-OBJS=q_phony.cmo pa_o.cmo pa_op.cmo pa_oop.cmo pa_ru.cmo pa_format.cmo pa_olabl.cmo pa_sml.cmo pa_lisp.cmo pa_extfun.cmo pa_fstream.cmo pr_r.cmo pr_rp.cmo pr_o.cmo pr_op.cmo pr_extend.cmo pr_extfun.cmo pr_null.cmo pr_depend.cmo
+OBJS=q_phony.cmo pa_o.cmo pa_op.cmo pa_oop.cmo pa_ru.cmo pa_format.cmo pa_olabl.cmo pa_sml.cmo pa_lisp.cmo pa_extfun.cmo pa_fstream.cmo pa_ocamllex.cma pr_r.cmo pr_rp.cmo pr_o.cmo pr_op.cmo pr_extend.cmo pr_extfun.cmo pr_null.cmo pr_depend.cmo
 INTF=pa_o.cmi
 CAMLP4OM=pa_o.cmo pa_op.cmo ../meta/pr_dump.cmo
 CAMLP4OMX=pa_o.cmx pa_op.cmx ../meta/pr_dump.cmx
@@ -25,6 +25,9 @@ camlp4o.opt: $(CAMLP4OMX)
 
 mkcamlp4.sh: mkcamlp4.sh.tpl
 	sed -e "s'LIBDIR'$(LIBDIR)'g" mkcamlp4.sh.tpl > mkcamlp4.sh
+
+pa_ocamllex.cma: pa_ocamllex.cmo
+	$(OCAMLC) -I $(OTOP)/lex syntax.cmo lexgen.cmo compact.cmo pa_ocamllex.cmo -a -o pa_ocamllex.cma
 
 bootstrap_lisp:
 	../boot/camlp4 ./pa_lispr.cmo -I ../boot pa_extend.cmo q_MLast.cmo ./pr_r.cmo ./pr_extend.cmo ./pr_rp.cmo -phony_quot pa_lisp.ml | sed -e 's/^;; \(.*\)$$/(* \1 *)/' -e 's|./pa_lispr.cmo|pa_r.cmo pa_rp.cmo|' -e 's/$$Id.*\$$/File generated by pretty print; do not edit!/' > tmp
@@ -58,6 +61,7 @@ install:
 	chmod a+x $(BINDIR)/mkcamlp4
 
 pa_lisp.cmo: pa_lispr.cmo
+pa_ocamllex.cmo: pa_o.cmo
 pr_extend.cmo: pa_extfun.cmo
 pr_o.cmo: pa_extfun.cmo
 pr_op.cmo: pa_extfun.cmo
